--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
             <scope>compile</scope>
         </dependency>
 
-    </dependencies>
 
-</project>
+        <!--  new -->
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.20.1</version>
+        </dependency>
+
+
+
+            </dependencies>
+
+        </project>
