--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,11 @@
 
 
 
-
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.0</version> <!-- Use the latest version available -->
+        </dependency>
 
 
 
